--- a/Resonance/app/src/main/AndroidManifest.xml
+++ b/Resonance/app/src/main/AndroidManifest.xml
@@ -15,10 +15,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".TrackListView" />
-        <activity android:name=".MainActivity" />
-        <activity android:name=".ProjectListView" />
-        <activity android:name=".SettingsView"></activity>
+        <activity android:name=".TrackListView"
+            android:label="Tack List"/>
+        <activity android:name=".MainActivity"
+            android:label="Tack View"/>
+        <activity android:name=".ProjectListView"
+            android:label="Load Project"/>
+        <activity android:name=".SettingsView"
+            android:label="Settings"/>
     </application>
 
 </manifest>
