--- a/Resonance/app/src/main/AndroidManifest.xml
+++ b/Resonance/app/src/main/AndroidManifest.xml
@@ -25,4 +25,8 @@
             android:label="Settings"/>
     </application>
 
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
 </manifest>
