--- a/Resonance/app/src/main/AndroidManifest.xml
+++ b/Resonance/app/src/main/AndroidManifest.xml
@@ -15,14 +15,25 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".TrackListView"
-            android:label="Tack List"/>
-        <activity android:name=".MainActivity"
-            android:label="Tack View"/>
-        <activity android:name=".ProjectListView"
-            android:label="Load Project"/>
-        <activity android:name=".SettingsView"
-            android:label="Settings"/>
+        <activity
+            android:name=".TrackListView"
+            android:label="Tack List" />
+        <activity
+            android:name=".MainActivity"
+            android:label="Tack View" />
+        <activity
+            android:name=".ProjectListView"
+            android:label="Load Project" />
+        <activity
+            android:name=".SettingsView"
+            android:label="Settings" />
+        <activity
+            android:name=".RecordView"
+            android:label="Record" />
+        <activity
+            android:name=".NewProjectView"
+            android:label="New Project" />
+        <activity android:name=".NewTrackView"></activity>
     </application>
 
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
