--- a/Resonance/app/src/main/AndroidManifest.xml
+++ b/Resonance/app/src/main/AndroidManifest.xml
@@ -7,10 +7,11 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme.Dark">
 
         <activity
-            android:name="com.redmannequin.resonance.Views.MainMenuView">
+            android:name="com.redmannequin.resonance.Views.MainMenuView"
+            android:theme="@style/AppTheme.Dark.NoTitleBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
