--- a/Resonance/app/src/main/AndroidManifest.xml
+++ b/Resonance/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.redmannequin.resonance.Views.LoadTrackView" />
         <activity android:name="com.redmannequin.resonance.Views.ProjectListView" />
         <activity android:name="com.redmannequin.resonance.Views.ProjectView" />
         <activity android:name="com.redmannequin.resonance.Views.NewTrackView" />
